[tool.poetry]
name = "click-cli-app"
version = "1.0.0"
description = "My first Click CLI app!"
authors = ["NicholasTD07 <NicholasTD07@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.scripts]
hello = "hello.hello:hello"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
